Closed Bug 635593 Opened 15 years ago Closed 15 years ago

Compilation failure in gfxWindowsPlatform.h during compilation without DWrite

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch fix v1.0Splinter Review
In this configuration cairo_win32_scaled_font_select_font is undefined in gfxWindowsPlatform.h. It's defined in cairo-win32.h, which is included by gfxDWriteFonts.h. Because of that, if DWrite is disabled, cairo-win32.h is missing. The attached patch fixes the problem by always including cairo-win32.h in gfxWindowsPlatform.h.
Attachment #513851 - Flags: review?(jfkthame)
Attachment #513851 - Flags: review?(jfkthame) → review+
Attachment #513851 - Flags: approval2.0?
Comment on attachment 513851 [details] [diff] [review] fix v1.0 As long as this passed try LGTM.
Attachment #513851 - Flags: approval2.0? → approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: