Bug 635593 - Compilation failure in gfxWindowsPlatform.h during compilation without DWrite r=jfkthame a=joe